beta version 1.0 done

--- a/assets/sass/abstracts/_mixins.scss
+++ b/assets/sass/abstracts/_mixins.scss
@@ -18,9 +18,9 @@
 // Usage:
 //***********
 
-div {
-  @include add-prefix(transform, scale(2.5, 2, 1.1));
-}
+// div {
+//   @include add-prefix(transform, scale(2.5, 2, 1.1));
+// }
 
 //*=====================****===================== 
 
