--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -24,6 +24,7 @@ $brand1-text-1: #299684;
 $rating-color:#ECC132;
 $brand1-text-special: #98A2B3;
 $border-color:#EAECF0;
+$brand-bg-course: rgba(103, 156, 197, 0.16);
 //===================== Brand 1 variables  end===================== //
 
 
@@ -53,6 +54,7 @@ $brand3-bg-1: #FFF7F5;
 $brand3-bg-2: #0F7494;
 $brand3-bg-3: #F9FAFB;
 $brand3-bg-4: #60468A;
+$brand3-footer-color:#C7A7F8;
 //===================== Brand 3 variables  end===================== //
 
 
@@ -76,11 +78,12 @@ $brand-bg-4: #F9FAFB;
 
 $body-color: #344054;
 $body-color-dark: #8d85b3;
- 
+
 // text colors
 $title-color:#101828;
 $text-color: #475467;
 $text-color-light: #667085;
+$footer-text-special: #bfbfbf;
 
 
 
@@ -107,7 +110,7 @@ $title-color-dark: #231f51;
 
 // social
 $facebook: #3D6AD6;
-$twitter:  #1DA1F3;
+$twitter: #1DA1F3;
 $linkedin: #0077B5;
 
 
