--- a/assets/sass/base/_helpers.scss
+++ b/assets/sass/base/_helpers.scss
@@ -129,6 +129,17 @@
   background-position: center;
 }
 
+.bg--full {
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  background-position: center;
+}
+.bg--defult {
+  background-repeat: no-repeat;
+  // background-size: 100% 100%;
+  // background-position: center;
+}
+
 .d-block{
   width: 100%;
 }
