--- a/assets/sass/base/_common.scss
+++ b/assets/sass/base/_common.scss
@@ -256,19 +256,27 @@
     border-radius: 5px;
     color: $body-color;
 
-    &--home1{
+    &--home1 {
         background-color: $secondary-color-1;
     }
-    &--home2{
-        background-color: $secondary-color-2; 
-        svg{
-            color: $brand2-bg-2;
+
+    &--home2 {
+        background-color: $secondary-color-2;
+
+        svg {
+            color: $white-color;
         }
-    } 
-    &--home3{
-        background-color: $secondary-color-3;
     }
-    &--home4{
+
+    &--home3 {
+        background-color: $secondary-color-3;
+
+        svg {
+            color: $white-color;
+        }
+    }
+
+    &--home4 {
         background-color: $secondary-color-4;
     }
 
@@ -302,6 +310,12 @@
             border: none;
             background-color: $brand3-bg-4;
             color: $white-color;
+
+            &::placeholder {
+                font-weight: 400;
+                color: rgba($white-color, $alpha:.5);
+            }
+
         }
 
         &::placeholder {
@@ -315,7 +329,7 @@
             // border-color: rgba($theme-color, $alpha: .80);
             border-color: none;
             box-shadow: none;
-        } 
+        }
     }
 
     input {
@@ -334,7 +348,7 @@
     border-color: $border-color;
     padding: 15px 24px;
     border-radius: 8px;
- 
+
     @include breakpoint(xl) {
         // padding: 0.8rem 1.25rem;
         padding: 17px 24px;
@@ -376,6 +390,7 @@
     ul {
         li {
             padding: 5px;
+
             a {
                 width: 46px;
                 height: 46px;
@@ -386,11 +401,12 @@
                 color: $brand-color-1;
                 font-weight: 700;
                 z-index: 1;
-                @extend %p-rel, %d-flex;
+                @extend %p-rel,
+                %d-flex;
                 // @include border-radius(50%);
                 @include add-prefix(transition, $transition);
-                border-radius:8px;
-                border: 1px solid rgba($brand-color-1, $alpha: 0.20); 
+                border-radius: 8px;
+                border: 1px solid rgba($brand-color-1, $alpha: 0.20);
 
                 &.active,
                 &:hover {
