--- a/assets/sass/components/_course.scss
+++ b/assets/sass/components/_course.scss
@@ -74,6 +74,12 @@
             border-top: 1px solid rgba($brand-color-1, $alpha: 0.1);
           }
 
+          a {
+            @extend %d-inline-flex,
+            %align-i-center;
+            gap: 10px;
+          }
+
           .course-price {
             @extend %flex,
             %align-i-center;
@@ -82,13 +88,30 @@
             del {
               @include font-size(14);
               font-weight: 400;
+
+              @include breakpoint (lg) {
+                font-size: 12px;
+              }
+
+              @include breakpoint (xl) {
+                font-size: 14px;
+              }
             }
 
             span {
-              font-size: 24px;
+              @include font-size(24px);
               font-weight: 600;
               color: $title-color;
+
+              @include breakpoint (lg) {
+                font-size: 20px;
+              }
+
+              @include breakpoint (xl) {
+                font-size: 24px;
+              }
             }
+
           }
         }
 
@@ -230,15 +253,24 @@
       }
 
       &__topbar {
-        @extend %d-flex,
-        %align-i-center,
-        %justify-between;
+        @extend %d-grid;
+        gap: 15px;
+
+        @include breakpoint(md) {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+        }
 
         &-left {
           .form-select {
-            border-radius: 50px;
+            border-radius: 15px;
             padding: 18px 24px;
             width: 160px;
+
+            @include breakpoint(xl) {
+              border-radius: 99px;
+            }
           }
 
           .form-select:focus {
@@ -255,24 +287,46 @@
         &-right {
           .nav {
             @extend %p-10;
-            background-color: $brand-bg-1;
-            border-radius: 50px;
+            background-color: $brand-bg-course;
+            border-radius: 20px;
+            gap: 10px;
+
+            @include breakpoint (sm) {
+              padding: 15px;
+            }
+
+            @include breakpoint (xl) {
+              padding: 10px;
+              border-radius: 99px;
+            }
           }
 
           ul {
             @extend %justify-evenly;
 
+            @include breakpoint(sm) {
+              justify-content: left;
+            }
+
+            @include breakpoint(xl) {
+              justify-content: space-evenly;
+            }
+
             li {
               @extend %d-inline-grid,
               %align-i-center;
 
-              &:not(:last-child) {
-                @extend %me-10;
-              }
+              // &:not(:last-child) {
+              //   @extend %me-10;
+              // }
 
               a {
                 color: $text-color-light;
-                border-radius: 50px;
+                border-radius: 10px;
+
+                @include breakpoint(xl) {
+                  border-radius: 99px;
+                }
 
                 &:hover,
                 &.active {
@@ -299,6 +353,7 @@
         &-inner {
           background-color: $white-color;
           border-radius: 16px;
+
         }
       }
 
@@ -308,11 +363,11 @@
 
         &-inner {
           @extend %of-hidden;
+          border-radius: 8px;
           object-fit: cover;
 
           img {
             @extend %w-100;
-            border-radius: 8px;
             @include add-prefix(transition, $transition);
           }
         }
@@ -341,6 +396,7 @@
         }
 
         &:hover {
+
           .course__thumb-add {
             background-color: $secondary-color-2;
             border: $secondary-color-2;
@@ -355,6 +411,7 @@
 
       &__content {
         @extend %d-flex,
+        %p-rel,
         %align-i-center,
         %justify-between,
         %px-25,
@@ -368,9 +425,6 @@
           }
 
           h6 {
-
-
-
             a {
               @extend %mb-10,
               %text-clamp-1;
@@ -406,6 +460,28 @@
           @extend %mx-5;
         }
       }
+
+      // &:hover {
+      //   &.course__thumb-add {
+      //     background-color: $secondary-color-2;
+      //     border: $secondary-color-2;
+      //   }
+
+      //   &.course__thumb-inner {
+      //     img {
+      //       border-radius: 30px;
+      //       @include add-prefix(transform, scale(1.05));
+      //     }
+      //   }
+
+
+      //   &.course__content-details {
+      //     h6 {
+      //       color: $secondary-color-2;
+      //       text-decoration: underline;
+      //     }
+      //   }
+      // }
     }
   }
 
@@ -415,18 +491,27 @@
         .nav {
           @extend %p-10;
           background: rgba(255, 227, 220, 0.6);
+          gap: 10px;
         }
 
         ul {
           @extend %justify-evenly;
 
+          @include breakpoint(sm) {
+            justify-content: left;
+          }
+
+          @include breakpoint(xl) {
+            justify-content: space-evenly;
+          }
+
           li {
             @extend %d-inline-grid,
             %align-i-center;
 
-            &:not(:last-child) {
-              @extend %me-10;
-            }
+            // &:not(:last-child) { 
+            //   @extend %me-10;
+            // }
 
             a {
               color: $text-color-light;
@@ -497,7 +582,13 @@
         h6 {
           @extend %text-clamp-2,
           %mb-20;
+          @include add-prefix(transition, $transition);
           font-weight: 600;
+
+          :hover {
+            color: $brand-color-3;
+            // text-decoration: underline;
+          }
         }
 
         &-bottom {
@@ -532,6 +623,13 @@
                 }
               }
             }
+          }
+        }
+
+        &:hover {
+          h6 {
+            color: $brand-color-3;
+            // text-decoration: underline;
           }
         }
       }
