--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -11,10 +11,25 @@
     &__cta {
         &-content {
             h2 {
+                @extend %mb-10;
                 color: $white-color;
             }
         }
-    } 
+
+        &-form {
+            .cta-btn {
+                padding: 19px;
+                color: $white-color;
+                // background: $brand-color-2;
+                // border-color: $brand-color-2;
+                @include font-size(16px);
+
+                @include breakpoint(sm) {
+                    padding: 19px 30px;
+                }
+            }
+        }
+    }
 
     &__top {
         &--style1 {
@@ -46,6 +61,7 @@
         &-moto {
             max-inline-size: 30ch;
             margin-block-end: 0;
+            color: $footer-text-special;
         }
 
         &-item {
@@ -70,8 +86,9 @@
                 @extend %mt-5;
             }
 
+            .info,
             a {
-                color: $white-color;
+                color: $footer-text-special;
             }
         }
     }
@@ -80,8 +97,11 @@
         &-tittle {
             h6 {
                 color: $white-color;
+                @extend %mb-25;
 
-                @extend %mb-30;
+                @include breakpoint(sm) {
+                    margin-block-end: 30px
+                }
             }
         }
 
@@ -125,22 +145,25 @@
 
     &__linklist {
         &-item {
-
-
             &:not(:last-child) {
                 @extend %mb-10;
 
-                @include breakpoint(md){
+                @include breakpoint(md) {
                     margin-block-end: 10px;
                 }
-                @include breakpoint(lg){
+
+                @include breakpoint(lg) {
                     margin-block-end: 15px;
-                } 
+                }
+            }
+
+            p {
+                color: $footer-text-special;
             }
 
             a {
                 @include add-prefix(transition, $transition);
-                color: $white-color;
+                color: $footer-text-special;
                 @extend %p-rel,
                 %d-inline-block;
 
@@ -192,14 +215,6 @@
                                     @include add-prefix(transform, scale(1.1));
                                 }
                             }
-
-                            .content {
-                                h6 {
-                                    a {
-                                        // @extend %theme-color;
-                                    }
-                                }
-                            }
                         }
 
                         .thumb {
@@ -219,16 +234,19 @@
                             width: calc(100% - 80px);
 
                             p {
+                                @extend %mb-5;
                                 @include font-size(16px);
 
                                 a {
                                     @extend %text-clamp-1,
-                                    %mb-10;
-                                    color: $white-color;
+                                    %mb-0;
+                                    color: $footer-text-special;
                                 }
                             }
 
                             .date {
+                                color: $brand3-footer-color;
+
                                 i {
                                     @extend %me-5;
                                 }
@@ -242,6 +260,7 @@
 
     &__end {
         border-top: 1px solid rgba($white-color, $alpha: .30);
+        color: $footer-text-special;
         @include font-size(14px);
 
         @include breakpoint(sm) {
@@ -276,18 +295,28 @@
 
         &-item {
             a {
-                color: $white-color;
+                color: $footer-text-special;
             }
         }
     }
 
     &__lower {
         background-color: $brand3-bg-4;
+        color: $footer-text-special;
+
         &-copyright {
             @extend %py-25;
-            
+
         }
     }
 
 
+
+    &.brand-4 {
+
+        p,
+        a {
+            color: $white-color;
+        }
+    }
 }
